修改配置文件

--- a/LiuMa-backend/src/main/resources/application.properties
+++ b/LiuMa-backend/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.flyway.validate-on-migrate=false
 spring.datasource.password=123456
 spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/liuma?serverTimezone=UTC&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://192.168.3.211:3306/liuma?serverTimezone=UTC&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
 
 # Hikari
 spring.datasource.hikari.maximum-pool-size=100
@@ -47,14 +47,14 @@ pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
 
 # log
-logging.file.path = /data/logs/${spring.application.name}
+logging.file.path = D:\\data\\logs
 logger.level = INFO
 
 # file
-test.file.path = /data/files/${spring.application.name}/testfile
-task.file.path = /data/files/${spring.application.name}/taskfile
-report.screenshot.path = /data/files/${spring.application.name}/screenshot
-app.package.path = /data/files/${spring.application.name}/package
+test.file.path = D:\\data\\files\\testFile
+task.file.path = D:\\data\\files\\taskFile
+report.screenshot.path = D:\\data\\filesScreenshot
+app.package.path = D:\\data\\filesPackage
 
 # on-off
 cloud.storage.on-off = off
