--- a/LiuMa-backend/src/main/resources/application.properties
+++ b/LiuMa-backend/src/main/resources/application.properties
@@ -11,7 +11,6 @@ spring.servlet.multipart.max-request-size=1024MB
 mybatis.configuration.cache-enabled=true
 mybatis.configuration.lazy-loading-enabled=false
 mybatis.configuration.aggressive-lazy-loading=true
-mybatis.configuration.multiple-result-sets-enabled=true
 mybatis.configuration.use-column-label=true
 mybatis.configuration.auto-mapping-behavior=full
 mybatis.configuration.default-statement-timeout=25000
@@ -27,15 +26,18 @@ spring.flyway.encoding=UTF-8
 spring.flyway.validate-on-migrate=false
 
 # database
-spring.datasource.password=123456
+spring.datasource.password=root
 spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://192.168.3.211:3306/liuma?serverTimezone=UTC&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
 
 # Hikari
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.maximum-pool-size=100
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.auto-commit=true
-spring.datasource.hikari.idle-timeout=60000
+spring.datasource.hikari.pool-name=DatebookHikariCP
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.connection-test-query=SELECT 1
